--- a/style.css
+++ b/style.css
@@ -130,3 +130,15 @@ main {
   transform: translateX(-50%);
   bottom: 1rem;
 }
+@media only screen and (max-width: 800px) {
+  html {
+    font-size: 6px;
+  }
+  .flag__img {
+    width: 14rem;
+    height: 8rem;
+  }
+  .header__title {
+    font-size: 6rem;
+  }
+}
